--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
     <title> Mr. Ibarra's webpage</title>
-    <head/>
+    </head>
   <body> Hello there, awesome person! </body>
 </html>
