--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
-  <head>
-    <title> Mr. Ibarra's webpage</title>
+    <head>
+        <title>Mr. Ibarra's webpage</title>
     </head>
-  <body> Hello there, awesome person! </body>
+
+    <body>
+        Hello
+    </body>
 </html>
