--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <body>
         Hello
+        <img src="https://avatars.githubusercontent.com/u/55035333?v=4">
         <h1>
             Mr. Ibarra
         </h1>
