--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 
     <body>
         Hello
+        <ul>
+            <li>Youtube</li>
+            <li>Spotify</li>
+            <li>Costco list</li>
+        </ul>
         <img src="https://avatars.githubusercontent.com/u/55035333?v=4">
         <h1>
             Mr. Ibarra
