--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
         Hello
         <ul>
             <li>Youtube</li>
+            <li><a href="https://www.youtube.com">This is a link to GitHub!</a></li>
             <li>Spotify</li>
+            <li><a href="https://www.spotify.com">This is a link to GitHub!</a></li>
             <li>Costco list</li>
+            <li><a href="https://www.costco.com">This is a link to GitHub!</a></li>
         </ul>
         <img src="https://avatars.githubusercontent.com/u/55035333?v=4">
         <h1>
